Subject: Button funcionality and show device
Add Button functionality in the drawFragment.
Connected device is now displayed in some of the fragments.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,4 +28,10 @@ dependencies {
 
     //design library for using toolbars
     implementation 'com.android.support:design:27.1.1'
+
+    // design library for using recyclerview
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+
+    // Cardview
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
