--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ install:
     # Install Smartcar shield library (used by our sketch)
     - arduino --install-library "Smartcar shield"
     - arduino --install-library "NewPing"
-    - arduino --install-library "TinyGPS++"
+    - git clone https://github.com/mikalhart/TinyGPS.git
     
 script:
     # Build the Android app
