--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,7 @@ install:
     # Install Smartcar shield library (used by our sketch)
     - arduino --install-library "Smartcar shield"
     - arduino --install-library "NewPing"
-    - git clone https://github.com/mikalhart/TinyGPSPlus.git $HOME/arduino_ide/libraries/TinyGPSPlus
+    - git clone https://github.com/mikalhart/TinyGPSPlus.git $HOME/arduino_ide/libraries/TinyGPSPlus || true
     
 script:
     # Build the Android app
