Subject: Add Polyline to the Google Maps View
Description: When the user taps a position at the Google Map, a Polyline
is created and drawn at the street. Also put API-key in a XML-file and
hide in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -276,6 +276,7 @@ local.properties
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
+android/app/src/main/res/values/keys.xml
 
 # Gradle
 .idea/**/gradle.xml
