Subject: Save Objects as json
Add method to let objects be saved as json
Add method to let bitmaps be saved as PNG

Co-authored-by: EmanuelDellsen <emanuel.dellsen@gmail.com>

Relates to #98

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     // Google Location and Activity Recognition
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
+    //GRADLE
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 
     // Google Maps
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
